# napi-gif-encoder

./: .editorconfig  Cargo.toml  README.md  eslint.config.mjs  index.d.ts  index.js  index.mjs  package-lock.json  package.json
.github/workflows/: CI.yaml  ci.yaml  lint.yaml  new-ci.yaml
__test__/: index.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
sample/: index.js  package.json
sample/mjs/: index.js  package.json
src/: encoder.rs  lib.rs
