[package]
authors = ["Tyrone Trevorrow <tyrone@sudeium.com>", "Gunnar Omander <gunnar@gomander.dev>"]
edition = "2021"
name = "gomander-napi-gif-encoder"
version = "0.0.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "^2.16.13"
napi-derive = "^2.16.12"
gif = "~0.13"
gomander-engiffen = "~0.9.1"
thiserror = "^1"

[build-dependencies]
napi-build = "^2.1.3"

[profile.release]
codegen-units = 1
