[package]
authors = ["Tyrone Trevorrow <tyrone@sudeium.com>", "Gunnar Omander <gunnar@gomander.dev>"]
edition = "2021"
name = "gomander-napi-gif-encoder"
version = "0.0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "^2"
napi-derive = "^2"
gif = "~0.13"
gomander-engiffen = { git = "https://github.com/gomander/engiffen.git" }
thiserror = "^2"

[build-dependencies]
napi-build = "^2"

[profile.release]
codegen-units = 1
